# swagger.json
@@ -287,7 +287,7 @@
         }
       }
     },
-    "/user/pets": {
+    "/pets": {
       "post": {
         "tags": ["User"],
         "summary": "Add User's pet",
@@ -331,7 +331,7 @@
         }
       }
     },
-    "/user/pets/{id}": {
+    "/pets/{id}": {
       "delete": {
         "tags": ["User"],
         "summary": "Delete User's pet",
@@ -376,7 +376,7 @@
         }
       }
     },
-    "/current/user/info": {
+    "/current/info": {
       "get": {
         "tags": ["User"],
         "summary": "Get User's info with his pets",
